; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_handshake_helper.c_do_handshake.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_handshake_helper.c_do_handshake.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i64 }
%struct.TYPE_8__ = type { i64, i32, i32 }

@SSL_TEST_HANDSHAKE_RESUME = common dso_local global i64 0, align 8
@SSL_TEST_INTERNAL_ERROR = common dso_local global i64 0, align 8
@SSL_TEST_SUCCESS = common dso_local global i64 0, align 8
@SSL_TEST_FIRST_HANDSHAKE_FAILED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_9__* @do_handshake(i32* %0, i32* %1, i32* %2, i32* %3, i32* %4, %struct.TYPE_8__* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_8__*, align 8
  %13 = alloca %struct.TYPE_9__*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store %struct.TYPE_8__* %5, %struct.TYPE_8__** %12, align 8
  store i32* null, i32** %14, align 8
  store i32* null, i32** %15, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i32*, i32** %8, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 2
  %22 = call %struct.TYPE_9__* @do_handshake_internal(i32* %16, i32* %17, i32* %18, %struct.TYPE_8__* %19, i32* %21, i32* null, i32* null, i32** %14, i32** %15)
  store %struct.TYPE_9__* %22, %struct.TYPE_9__** %13, align 8
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %24 = icmp eq %struct.TYPE_9__* %23, null
  br i1 %24, label %37, label %25

25:                                               ; preds = %6
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %27 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = load i64, i64* @SSL_TEST_HANDSHAKE_RESUME, align 8
  %30 = icmp ne i64 %28, %29
  br i1 %30, label %37, label %31

31:                                               ; preds = %25
  %32 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %33 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %32, i32 0, i32 0
  %34 = load i64, i64* %33, align 8
  %35 = load i64, i64* @SSL_TEST_INTERNAL_ERROR, align 8
  %36 = icmp eq i64 %34, %35
  br i1 %36, label %37, label %38

37:                                               ; preds = %31, %25, %6
  br label %59

38:                                               ; preds = %31
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %40 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  %42 = load i64, i64* @SSL_TEST_SUCCESS, align 8
  %43 = icmp ne i64 %41, %42
  br i1 %43, label %44, label %48

44:                                               ; preds = %38
  %45 = load i64, i64* @SSL_TEST_FIRST_HANDSHAKE_FAILED, align 8
  %46 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %47 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %46, i32 0, i32 0
  store i64 %45, i64* %47, align 8
  br label %59

48:                                               ; preds = %38
  %49 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  %50 = call i32 @HANDSHAKE_RESULT_free(%struct.TYPE_9__* %49)
  %51 = load i32*, i32** %10, align 8
  %52 = load i32*, i32** %11, align 8
  %53 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %54 = load %struct.TYPE_8__*, %struct.TYPE_8__** %12, align 8
  %55 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %54, i32 0, i32 1
  %56 = load i32*, i32** %14, align 8
  %57 = load i32*, i32** %15, align 8
  %58 = call %struct.TYPE_9__* @do_handshake_internal(i32* %51, i32* null, i32* %52, %struct.TYPE_8__* %53, i32* %55, i32* %56, i32* %57, i32** null, i32** null)
  store %struct.TYPE_9__* %58, %struct.TYPE_9__** %13, align 8
  br label %59

59:                                               ; preds = %48, %44, %37
  %60 = load i32*, i32** %14, align 8
  %61 = call i32 @SSL_SESSION_free(i32* %60)
  %62 = load i32*, i32** %15, align 8
  %63 = call i32 @SSL_SESSION_free(i32* %62)
  %64 = load %struct.TYPE_9__*, %struct.TYPE_9__** %13, align 8
  ret %struct.TYPE_9__* %64
}

declare dso_local %struct.TYPE_9__* @do_handshake_internal(i32*, i32*, i32*, %struct.TYPE_8__*, i32*, i32*, i32*, i32**, i32**) #1

declare dso_local i32 @HANDSHAKE_RESULT_free(%struct.TYPE_9__*) #1

declare dso_local i32 @SSL_SESSION_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
